--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Freelancer - Start Bootstrap Theme</title>
+  <title>Daniel Rand - Portfolio</title>
 
   <!-- Custom fonts for this theme -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -98,7 +98,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+            <img class="img-fluid" src="img/portfolio/GGScreenShot.png" alt="">
           </div>
         </div>
 
@@ -187,11 +187,11 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">Teaching assistant for Design and Analysis of Algorithms at Queens College, seeking full time employment
+          <p class="lead">Teaching assistant for Design and Analysis of Algorithms at Queens College <br><br> Honors Senior Computer Science Major and Math Minor <br><br> Seeking full time employment in June 2020
           </p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">.....</p>
+          <p class="lead">Hi! My name is Daniel Rand and I am a Software Engineer, but I am also passionate about music, guitar, and cooking. The projects displayed above are personal projects of mine from over the years, but my coding experience extends beyond what I can show you here. I have worked as a Software Engineer Intern at Check Point Software Technologies and at Leapfrog Builders pushing code to large scale products while employing modern agile develepment methodologies. If you'd like to find out more about my background here's a link to my resume: . Feel free to contact me below if you're looking. Thanks for stopping by!</p>
         </div>
       </div>
     </div>
@@ -213,12 +213,55 @@
         <div class="divider-custom-line"></div>
       </div>
 
+      <!-- Contact Section Form 
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. 
+          <form method="POST" action="https://formspree.io/danielrand23@gmail.com"><input type="email" name="_replyto"><textarea   name="body"></textarea><input type="submit" value="Send"></form>
+
+        </div>
+      </div>
+        -->
+
       <!-- Contact Section Form -->
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-          <form method="POST" action="https://formspree.io/danielrand23@gmail.com"><input type="email" name="_replyto"><textarea   name="body"></textarea><input type="submit" value="Send"></form>
-
+          <form method="POST" action="https://formspree.io/danielrand23@gmail.com">
+            <div class="control-group">
+              <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                <label>Name</label>
+                <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="control-group">
+              <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                <label>Email Address</label>
+                <input type="email" name="_replyto" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="control-group">
+              <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                <label>Phone Number</label>
+                <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number.">
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="control-group">
+              <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                <label>Message</label>
+                <textarea class="form-control" name = "body" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <br>
+            <div id="success"></div>
+            <div class="form-group">
+              <button type="submit" value = "Send" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
+            </div>
+          </form>
         </div>
       </div>
 
@@ -273,7 +316,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Log Cabin</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Graph GUI</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -283,9 +326,9 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/cabin.png" alt="">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/GraphGuiDemo.gif" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-5">A Java graphical user interface to build and perform algorithms on the graph data structure. Source code:</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
