Fixed typos, added porfolio projects

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">Software Engineer - Student - Teaching Assistnat - Seeking Full Time Employment</p>
+      <p class="masthead-subheading font-weight-light mb-0">Software Engineer - Student - Teaching Assistant - Seeking Full Time Employment</p>
 
     </div>
   </header>
@@ -110,7 +110,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/cake.png" alt="">
+            <img class="img-fluid" src="img/portfolio/HomeworkGrader.png" alt="">
           </div>
         </div>
 
@@ -122,7 +122,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+            <img class="img-fluid" src="img/portfolio/RectangleIcon.png" alt="">
           </div>
         </div>
 
@@ -328,7 +328,7 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/GraphGuiDemo.gif" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">A Java graphical user interface to build and perform algorithms on the graph data structure. Source code:</p>
+                <p class="mb-5">A Java graphical user interface to build and perform algorithms on the graph data structure. Source code: <a href="https://github.com/danielrand/Graph-GUI" target = "_blank">https://github.com/danielrand/Graph-GUI</a></p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -355,7 +355,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Tasty Cake</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Homework Grader</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -365,9 +365,9 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/cake.png" alt="">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/HomeworkGrader.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-5">As a teaching assistant for Algorithms I am tasked with grading coding projects submitted via email. There is usually around one project per week, written in either Java or C++. It became clear rather quickly that it would be impossible to manually sort through student submissions in my email and to download, run, and grade them, so I took it upon myself to automate this process. The script is a command line tool that downloads all attachments from your recent emails that conform to a search string, organizes the files neatly in directories, runs the Java or C++ code and writes output files and reports for every student in an output folder. Check it out on GitHub: <a href="https://github.com/danielrand/TA-Homework-Grader" target = "_blank">https://github.com/danielrand/TA-Homework-Grader</a></p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -394,7 +394,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Circus Tent</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Android Reminder App</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -404,9 +404,9 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/circus.png" alt="">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/ReminderPage.jpeg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-5">A simple, easy to use Android reminder application with background notifcation functionality. Data persistance is achieved through the Room API on top of a SQLite database. Code: <a href="https://github.com/danielrand/Android-Reminder-App" target = "_blank">https://github.com/danielrand/Android-Reminder-App</a></p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
