Minor Changes, links added

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">Software Engineer - Student - Teaching Assistant - Seeking Full Time Employment</p>
+      <p class="masthead-subheading font-weight-light mb-0">Software Engineer - Teaching Assistant - Seeking Full Time Employment June 2020</p>
 
     </div>
   </header>
@@ -191,7 +191,7 @@
           </p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">Hi! My name is Daniel Rand and I am a Software Engineer, but I am also passionate about music, guitar, and cooking. The projects displayed above are personal projects of mine from over the years, but my coding experience extends beyond what I can show you here. I have worked as a Software Engineer Intern at Check Point Software Technologies and at Leapfrog Builders pushing code to large scale products while employing modern agile develepment methodologies. If you'd like to find out more about my background here's a link to my resume: . Feel free to contact me below if you're looking. Thanks for stopping by!</p>
+          <p class="lead">Hi! My name is Daniel Rand and I am a Software Engineer, but I am also passionate about music, guitar, and cooking. The projects displayed above are personal projects of mine from over the years, but my coding experience extends beyond what I can show you here. I have worked as a Software Engineer Intern at Check Point Software Technologies and at Leapfrog Builders pushing code to large scale products while employing modern agile develepment methodologies. If you'd like to find out more about my background here's a link to my <a href="https://drive.google.com/file/d/1-YnPnMpm3IK5Ypcsk2-n-6qUIkr_BSZb/view?usp=sharing" target = "_blank" style="background-color:#343a40"> resume</a>. Feel free to contact me below if you're looking. Thanks for stopping by!</p>
         </div>
       </div>
     </div>
