testing no redirect

--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
             </div>
             <br>
             <div id="success"></div>
+            <input type="hidden" name="_next" value="https://danielrand.github.io" />
             <div class="form-group">
               <button type="submit" value = "Send" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
             </div>
