Updated portfolio and contact me

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/game.png" alt="">
+            <img class="img-fluid" src="img/portfolio/ComputerVision.png" alt="">
           </div>
         </div>
 
@@ -146,7 +146,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/safe.png" alt="">
+            <img class="img-fluid" src="img/portfolio/Maccabeam.png" alt="">
           </div>
         </div>
 
@@ -427,7 +427,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Controller</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Computer Vision</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -437,9 +437,15 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/game.png" alt="">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/morphology.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-5">As a student I implemented a variety of computer vision algorithms such as 
+                    <a href="https://github.com/danielrand/Computer-Vision-Morphology" target = "_blank"> Mathematical Morphology</a>, 
+                    <a href="https://github.com/danielrand/Computer-Vision-Chain-Coding" target = "_blank"> Chain Code Edge Detection Method</a>, 
+                    <a href="https://github.com/danielrand/Computer-Vision-Medial-Axis-Skeletonization" target = "_blank"> Medial Axis Derivation/Skeleonization </a>, 
+                    <a href="https://github.com/danielrand/Image-Processing-Connected-Components" target = "_blank"> Connection Components </a>, 
+                    <a href="https://github.com/danielrand/Image-Noise-Filtering" target = "_blank"> Noise Filtering.</a>
+                  The example above is of the input an output to my Morphology program. The input image (left) is a binary image with "meatball" objects and "spaghetti" as noise, but by using the Opening morphological operation on the input using a structured element that matches the structure of the meatballs I was able to extract just them. You can view the code to that project or any of the others by clicking on their links.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -466,7 +472,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Locked Safe</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Maccabeam -     A search / web crawler application</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -476,9 +482,12 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/safe.png" alt="">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/Maccabeam.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-5">I developed this web app with the help of a couple friends. We Utilized an Agile development approach, Docker containers, a mySql Database, and deployed to Heroku. 
+                  <br> Website: <a href="https://maccabeam.herokuapp.com/" target = "_blank"> https://maccabeam.herokuapp.com/</a>
+                  <br> Code: <a href="https://github.com/danielrand/Search-and-Reporting-Application" target = "_blank"> https://github.com/danielrand/Search-and-Reporting-Application</a>
+                </p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
