--- a/index.html
+++ b/index.html
@@ -150,17 +150,7 @@
           </div>
         </div>
 
-        <!-- Portfolio Item 6 -->
-        <div class="col-md-6 col-lg-4">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
-            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-              <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
-          </div>
-        </div>
+       
 
       </div>
       <!-- /.row -->
@@ -322,7 +312,7 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/GraphGuiDemo.gif" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">A Java graphical user interface to build and perform algorithms on the graph data structure. Source code: <a href="https://github.com/danielrand/Graph-GUI" target = "_blank">https://github.com/danielrand/Graph-GUI</a></p>
+                <p class="mb-5"> A Java graphical user interface to build and perform algorithms on the graph data structure. You can add and remove edges by clicking the screen, and can highlight connected components and cut vertices. Source code: <a href="https://github.com/danielrand/Graph-GUI" target = "_blank">https://github.com/danielrand/Graph-GUI</a></p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -484,7 +474,7 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Maccabeam.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">I developed this web app with the help of a couple friends. We Utilized an Agile development approach, Docker containers, a mySql Database, and deployed to Heroku. 
+                <p class="mb-5">I developed this web app with the help of a couple friends. We Utilized an Agile development approach, Docker containers, a mySql Database, and deployed to Heroku. The app is capable of searching for words by either web crawling, using the Google custom search API, or by running a custom search algorithm on user uploaded JSON, CSV, or XML files. Additionally, the user can choose to select and download the results from any of the searches in the form of the their choice of the three aforementioned file formats.
                   <br> Website: <a href="https://maccabeam.herokuapp.com/" target = "_blank"> https://maccabeam.herokuapp.com/</a>
                   <br> Code: <a href="https://github.com/danielrand/Search-and-Reporting-Application" target = "_blank"> https://github.com/danielrand/Search-and-Reporting-Application</a>
                 </p>
@@ -500,45 +490,7 @@
     </div>
   </div>
 
-  <!-- Portfolio Modal 6 -->
-  <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-labelledby="portfolioModal6Label" aria-hidden="true">
-    <div class="modal-dialog modal-xl" role="document">
-      <div class="modal-content">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">
-            <i class="fas fa-times"></i>
-          </span>
-        </button>
-        <div class="modal-body text-center">
-          <div class="container">
-            <div class="row justify-content-center">
-              <div class="col-lg-8">
-                <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Submarine</h2>
-                <!-- Icon Divider -->
-                <div class="divider-custom">
-                  <div class="divider-custom-line"></div>
-                  <div class="divider-custom-icon">
-                    <i class="fas fa-star"></i>
-                  </div>
-                  <div class="divider-custom-line"></div>
-                </div>
-                <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/submarine.png" alt="">
-                <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
-                  <i class="fas fa-times fa-fw"></i>
-                  Close Window
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
+  
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
