Fixed employment status

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">Software Engineer - Teaching Assistant - Seeking Full Time Employment June 2020</p>
+      <p class="masthead-subheading font-weight-light mb-0">Software Engineer  |  Algorithms Teaching Assistant  |  Senior Honors Computer Science Student</p>
 
     </div>
   </header>
@@ -178,7 +178,7 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">Teaching assistant for Design and Analysis of Algorithms at Queens College <br><br> Honors Senior Computer Science Major and Math Minor <br><br> Seeking full time employment in June 2020
+          <p class="lead">Teaching assistant for Design and Analysis of Algorithms at Queens College <br><br> Honors Senior Computer Science Major and Math Minor
           </p>
         </div>
         <div class="col-lg-4 mr-auto">
