--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">Software Engineer  |  Algorithms Teaching Assistant  |  Senior Honors Computer Science Student</p>
+      <p class="masthead-subheading font-weight-light mb-0">Software Engineer  |  Musician</p>
 
     </div>
   </header>
@@ -94,6 +94,17 @@
 
       <div class="row">
 
+        <div class="col-md-6 col-lg-4">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal0">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+              <div class="portfolio-item-caption-content text-center text-white">
+                <i class="fas fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/wordle.png" alt="">
+          </div>
+        </div>
+        
         <div class="col-md-6 col-lg-4">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -192,11 +203,11 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">Teaching assistant for Design and Analysis of Algorithms at Queens College <br><br> Honors Senior Computer Science Major and Math Minor
+          <p class="lead">Current Role: Technology Analyst at Roivant Sciences
           </p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">Hi! My name is Daniel Rand and I am a Software Engineer, but I am also passionate about music, guitar, and cooking. The projects displayed above are personal projects of mine from over the years, but my coding experience extends beyond what I can show you here. I have worked as a Software Engineer Intern at Check Point Software Technologies and at Leapfrog Builders pushing code to large scale products while employing modern agile develepment methodologies. If you'd like to find out more about my background here's a link to my <a href="https://drive.google.com/file/d/1-YnPnMpm3IK5Ypcsk2-n-6qUIkr_BSZb/view?usp=sharing" target = "_blank" style="background-color:#343a40"> resume</a>. Feel free to contact me below if you're looking. Thanks for stopping by!</p>
+          <p class="lead">Hi! My name is Daniel Rand and I am a Software Engineer, but I am also passionate about literature, music, guitar, chess, and cooking. The projects displayed above are personal projects of mine from over the years. If you'd like to find out more about my background here's a link to my <a href="https://drive.google.com/file/d/1O17o1sIw6PUzVVJsep3mbdKeDT1jaKrp/view?usp=sharing" target = "_blank" style="background-color:#343a40"> resume</a>. Feel free to contact me below if you'd like to reach out. Thanks for stopping by!</p>
         </div>
       </div>
     </div>
@@ -300,6 +311,42 @@
   </div>
 
   <!-- Portfolio Modals -->
+  <div class="portfolio-modal modal fade" id="portfolioModal0" tabindex="-1" role="dialog" aria-labelledby="portfolioModal1Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Portfolio Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Wordle Solver</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+                <!-- Portfolio Modal - Text -->
+                <p class="mb-5">A python based engine that optimally solves the popular word game, Wordle. Source code: <a href="https://github.com/danielrand/wordle-solver" target = "_blank">https://github.com/danielrand/wordle-solver</a></a></p>
+                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                  <i class="fas fa-times fa-fw"></i>
+                  Close Window
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-labelledby="portfolioModal1Label" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
       <div class="modal-content">
